# redline

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  index.html  package-lock.json  package.json  rustfmt.toml  svelte.config.js  tsconfig.json  update.json  vite.config.ts  vitest.config.ts
.claude/: HANDOVER.md
.claude/rules/: judgment.md  kb-critical.md
.claude/skills/sendit/: SKILL.md
.claude/skills/sendit/references/: agent-prompt.md  release-todo.md
.claude/specs/: 2026-06-25-redline-m4-plan.md
.forgejo/: Dockerfile.test-rust
.forgejo/workflows/: ci.yml
.github/workflows/: build-releases.yml
bench/: README.md  RUNBOOK-S20.md
bench/results/: cache-pagecap-sweep-20260608.md  headless-bench-20260607.md
crates/pdf-diff/: Cargo.toml
crates/pdf-diff/examples/: headless.rs
crates/pdf-diff/src/: lib.rs
crates/pdf-diff/tests/: integration.rs
docs/: bluebeam-alternative-v1-spec.md  windows-code-signing.md
docs/superpowers/plans/: 2026-06-12-s1-document-save-pipeline.md  2026-06-12-v1-completion-roadmap.md  2026-06-14-s2-markup-authoring.md  2026-06-16-g6-select-move-resize-delete.md  2026-06-16-g7-properties-panel.md  2026-06-16-g8-grouping.md  2026-06-24-m3-takeoff.md
docs/superpowers/specs/: 2026-06-14-s2-markup-authoring-design.md
scripts/: fetch-pdfium.sh  gen-signing-cert.sh  sync-version.cjs
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: identity.rs  lib.rs  main.rs
src-tauri/src/commands/: compare.rs  diag.rs  docops.rs  document.rs  license.rs  mod.rs  recent_docs.rs  render.rs  search.rs  settings.rs  takeoff.rs  text.rs  text_select.rs  toolchest.rs  versioning.rs
src-tauri/src/compare/: mod.rs
src-tauri/src/docops/: mod.rs
src-tauri/src/document/: annots.rs  known_passwords.rs  mod.rs  page_ops.rs  save.rs  store.rs
src-tauri/src/geometry/: mod.rs
src-tauri/src/license/: client.rs  device.rs  gate.rs  mod.rs  service.rs  store.rs  token.rs
src-tauri/src/markup/: annotation.rs  appearance.rs  mod.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/render/: mod.rs
src-tauri/src/search/: indexer.rs  mod.rs
src-tauri/src/sidecar/: meta.rs  mod.rs
src-tauri/src/storage/: mod.rs  recent_docs.rs  settings.rs  versioning.rs
src-tauri/src/takeoff/: math.rs  measure.rs  mod.rs  scale.rs
src-tauri/src/text/: mod.rs
src-tauri/src/toolchest/: btx.rs  mod.rs  sequence.rs  stamp.rs  store.rs
src/components/: ActivationGate.svelte  CalibrationDialog.svelte  CalibrationDialog.test.ts  ComparePanel.svelte  ComparePanel.test.ts  ConfirmDialog.svelte  ConfirmDialog.test.ts  CountSetPicker.svelte  DocumentHistoryPanel.svelte  MeasurementPanel.svelte  MeasurementPanel.test.ts  PasswordPromptDialog.svelte  PasswordPromptDialog.test.ts  PropertiesPanel.svelte  PropertiesPanel.test.ts  SavePromptDialog.svelte  SavePromptDialog.test.ts  SearchPanel.svelte  SearchPanel.test.ts  SettingsDialog.svelte  StampPromptDialog.svelte  StampPromptDialog.test.ts  TabBar.interaction.test.ts  TabBar.svelte  ThumbnailPanel.svelte  ThumbnailPanel.test.ts  ToolChestPanel.svelte  ToolChestPanel.test.ts  ToolPalette.interaction.test.ts  ToolPalette.svelte  UpdateNotification.svelte  VersionPanel.svelte  VersionPanel.test.ts  Viewport.interaction.test.ts  Viewport.svelte
src/lib/: doc-tabs.svelte.ts  doc-tabs.test.ts  ipc.test.ts  ipc.ts  license.test.ts  license.ts  markup-commands.test.ts  markup-commands.ts  markup-properties.test.ts  markup-properties.ts  markup-render.test.ts  markup-render.ts  markup-select.test.ts  markup-select.ts  markup-store.svelte.ts  markup-store.test.ts  markup-tools.test.ts  markup-tools.ts  measurement-tools.test.ts  measurement-tools.ts  password-cache.test.ts  password-cache.ts  recent-docs.test.ts  recent-docs.ts  settings.test.ts  settings.ts  styles.css  takeoff-store.svelte.ts  takeoff-store.test.ts  text-select.test.ts  text-select.ts  tile-cache.test.ts  tile-cache.ts  toolchest-activation.test.ts  toolchest-activation.ts  toolchest-reorder.test.ts  toolchest-reorder.ts  toolchest-store.svelte.ts  viewport.test.ts  viewport.ts
src/tests/: setup.ts
tools/: gui-harness.mjs
