[workspace]
resolver = "2"
members = [
    "src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "git@ssh.forge.mms.name:emittiv/redline.git"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
thiserror = "2"
anyhow = "1"
