[package]
name = "redline"
version = "0.3.5"
description = "Redline — AEC PDF markup, takeoff, and document management"
authors = ["Emittiv L.L.C-FZ"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80"
# The crate has multiple binaries (the app `redline` + the `bench` harness). Tauri's
# dev/build runs a bare `cargo run`, which is ambiguous with >1 bin — pin the default.
default-run = "redline"

[lib]
name = "redline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless §20 performance benchmark harness. Drives the render core directly
# (no Tauri/webview) over the bench corpus and measures open/tile/page-jump
# latency + peak RSS. Run: PDFIUM_DYNAMIC_LIB_PATH=... cargo run --release --bin bench -- <corpus-dir>
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# --- Tauri core ---
tauri = { version = "2.5.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-log = "2.0.0-rc"
# Auto-updater (checks update.json manifest on GitHub, downloads + verifies +
# installs the signed release). tauri-plugin-process supplies relaunch() so
# the frontend can restart into the new version after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Logging ---
log = "0.4"

# --- Error handling ---
thiserror = "2"
anyhow = "1"

# --- Headless two-tier PDF diff (M6 compare module, shared with cad-export-api) ---
pdf-diff = { path = "../crates/pdf-diff" }

# --- PDF rendering (display only) ---
# pdfium-render 0.8.x per spec §3. Latest on crates.io is 0.9.1; pin to 0.8.x
# series as spec-locked. Use the "thread_safe" feature for use across tokio threads.
# PDFium binary: use pdfium-render's bundled auto-download via build.rs OR
# point PDFIUM_DYNAMIC_LIB_PATH env var at a prebuilt libpdfium.
pdfium-render = { version = "0.8.28", features = ["thread_safe", "image"] }

# --- Low-level PDF ops ---
lopdf = "0.36"

# --- Memory-mapped file loading ---
# Required for PDFs > 2 GiB: PDFium's streaming FPDF_LoadCustomDocument path uses
# a signed 32-bit internal file offset (2 GiB cap), so a 2.1 GB scanned set fails
# to load pages. mmap + FPDF_LoadMemDocument64 (64-bit clean) is the fix, without
# reading the whole file into RSS. See render::open_document.
memmap2 = "0.9.10"

# --- Image handling (tile encoding → PNG/RGBA bytes to webview) ---
image = { version = "0.25", features = ["png"] }

# --- Unique IDs ---
uuid = { version = "1.0", features = ["v4", "serde"] }

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- XLSX + CSV export (Markup List export, spec §7) ---
rust_xlsxwriter = "0.95.0"
csv = "1.4.0"

# --- Spatial index for snap targets (geometry module) ---
# rstar = r-tree for 2D snap-target lookups
rstar = "0.12"

# --- Full-text search (M4 S4) ---
tantivy = "0.22"
notify = "6"
roxmltree = "0.21.1"
flate2 = "1.1.9"
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }

# --- S2b client entitlement (emittiv-staff license consumer) ---
# Offline Ed25519 verification of the redline entitlement token.
ed25519-dalek = "2.2"
# base64url (de)coding of the token's <payload>.<signature> segments and the
# baked SPKI-DER public key PEM.
base64 = "0.22"
# HTTP calls to the emittiv-staff license issue/renew endpoints.
reqwest = { version = "0.12", features = ["json"] }
# Object-safe async trait for LicenseClient (dyn dispatch, so the Tauri
# commands can be tested against a fake without a live HTTP call).
async-trait = "0.1"

# --- Future milestones (feature-gated to keep M1 build lean) ---
# leptess = { version = "0.14", optional = true }   # OCR — M4

[features]
default = []
# Uncomment when milestone work begins:
# ocr = ["dep:leptess"]

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
